updted the html and css

--- a/mines/index.html
+++ b/mines/index.html
@@ -13,7 +13,7 @@
     />
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
+  <body class="whole">
     <header class="first-indctory">
       <div class="fad">
         <p><i class="fa-solid fa-envelope"></i> Hello@nav.com</p>
@@ -72,8 +72,8 @@
               aliqua. Ut enim ad minim veniam, quis nostrud exercitation
               ullamco laboris nisi ut <br>  aliquip ex ea.
             </p>
-            <button>Free Consulting</button>
-              <button>Learn More</button>
+            <button class="free">Free Consulting</button>
+              <button class="learn">Learn More</button>
           </div>
           <div class="image-container">
             <img src="/assets/img/hero-slider/pexels-ekaterina-bolovtsova-6077326.jpg" alt="">
@@ -83,16 +83,14 @@
           <div>
             <div class="small-border">
                  <p>Right way</p>
+                 <div class="das-1"></div>
             </div>
             <h1>A people’s perspective on <br> On Powerful Access to Justice</h1>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-              sed do eiusmod tempor incididunt ut labore <br>  et dolore magna
-              aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-              ullamco laboris nisi ut <br>  aliquip ex ea.
+              Bars provides users with easy-to-understand answers to common legal questions, helping individuals navigate the legal system and understand their rights. This ensures users receive the information they need to make informed decisions regarding their legal matters.
             </p>
-            <button>Free Consulting</button>
-              <button>Learn More</button>
+            <button class="free">Free Consulting</button>
+              <button class="learn">Learn More</button>
           </div>
           <div class="image-container">
             <img src="/assets/img/hero-slider/pexels-ekaterina-bolovtsova-6077326.jpg" alt="">
@@ -101,8 +99,20 @@
        <div class="btn-controller">
         <button class="go-Front" data-cana="2"><i class="fa-solid fa-greater-than"></i></button>
        </div>
+      </div>   
+    </section>
+    <section>
+      <div class="card-container-2">
+        <div>
+          <div>
+            <p><i class="fa-solid fa-scale-balanced"></i></p>
+          </div>
+          <div>
+            <h1>Legal Guidance and Support</h1>
+            <p>Bars is a software that answers simple legal questions in  <br> plain language, allowing people to know their rights <br>  and approach the legal system. This makes sure that the <br>  users are well informed in as much as they deal with <br>  their legal issues so that they can make informed decisions.</p>
+          </div>
+        </div>
       </div>
-      
     </section>
     <script src="index.js"></script>
   </body>
