`Added new features and content to the website, including a new section with cards, updated styles for the cards and the about section, and added new icons and fonts.`

--- a/mines/index.html
+++ b/mines/index.html
@@ -11,6 +11,12 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
   </head>
   <body class="whole">
@@ -103,8 +109,8 @@
     </section>
     <section>
       <div class="card-container-2">
-        <div>
-          <div>
+        <div class="card-container">
+          <div class="icon">
             <p><i class="fa-solid fa-scale-balanced"></i></p>
           </div>
           <div>
@@ -112,6 +118,68 @@
             <p>Bars is a software that answers simple legal questions in  <br> plain language, allowing people to know their rights <br>  and approach the legal system. This makes sure that the <br>  users are well informed in as much as they deal with <br>  their legal issues so that they can make informed decisions.</p>
           </div>
         </div>
+        <!-- second container begins -->
+        <div class="card-container">
+          <div class="icon">
+            <p><i class="fa-solid fa-gavel"></i></p>
+          </div>
+          <div>
+            <h1>Pro Bono Lawyer Connection  </h1>
+            <p> The platform directly links users with pro bono lawyers <br> in order to facilitate them getting the right lawyer <br>  depending on the type and severity of their case. This <br> cuts down the time and energy required in the <br>  contracting process thus making it easier for one to get <br> the needed legal assistance</p>
+          </div>
+        </div>
+        <!-- start of third column -->
+         <div class="card-container">
+          <div class="icon">
+            <p><i class="fa-solid fa-user-secret"></i></p>
+          </div>
+          <div>
+            <h1>Real-Time Case Updates</h1>
+            <p>Bars enable the clients to monitor the progress of their <br>  case through the provision of constant and frequent <br>  updates of events such as important dates, hearings <br>  among others. This feature makes a user always <br>  informed on the status of their legal issues and be in a <br>  position to communicate with lawyers hassle freel</p>
+          </div>
+         </div>
+      </div>
+    </section>
+    <section class="info-naham">
+      <div class="about-info-container">
+        <div class="real-about">
+          <p>About-Us</p>
+          <div class="das-1"></div>
+          <h1>We help individuals navigate the legal <br> system and understand their rights.</h1>
+          <p>Bars provides users with easy-to-understand answers to common legal questions, helping individuals navigate the  legal system and understand their rights. This ensures users receive the information they need to make informed  decisions regarding their legal matters.</p>
+          <div class="features-side">
+            <div>
+              <p><i class="fa-solid fa-square-check"></i> 100% success rate</p>
+            </div>
+            <div>
+              <p><i class="fa-solid fa-square-check"></i> Fast Support</p>
+            </div>
+            <div>
+              <p><i class="fa-solid fa-square-check"></i> No need Extra Cost for consult</p>
+            </div>
+            <div>
+              <p><i class="fa-solid fa-square-check"></i>High Court Performance</p>
+            </div>
+            <div>
+              <p><i class="fa-solid fa-square-check"></i>Expert Legal Service</p>
+            </div>
+            <div>
+              <p><i class="fa-solid fa-square-check"></i> Free Consultation</p>
+            </div>
+            <div>
+              <p><i class="fa-solid fa-square-check"></i> Highly Recommendation</p>
+            </div>
+            <div>
+              <p><i class="fa-solid fa-square-check"></i> Quick Complete Case</p>
+            </div>
+          </div>
+          <button class="free-1">Free Consultation</button>
+        </div>
+        <div class="image-about-container">
+          <img src="/assets/img/hero-slider/pexels-sora-shimazaki-5668473.jpg" alt="">
+          <div class="inside"></div>
+        </div>
+       
       </div>
     </section>
     <script src="index.js"></script>
