almost finish the home page soon abobi

--- a/mines/index.html
+++ b/mines/index.html
@@ -11,12 +11,18 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body class="whole">
@@ -35,7 +41,7 @@
         <button class="get">Get A Schedule</button>
       </nav>
     </header>
-    <hr>
+    <hr />
     <header class="second-inductroduction">
       <div>
         <h1>BARS</h1>
@@ -56,58 +62,79 @@
     </header>
     <section>
       <div class="dynamic-search" id="displayDynamic">
-        <input type="text" id="search" placeholder="Search...">
+        <input type="text" id="search" placeholder="Search..." />
         <button id="search-btn">Search</button>
       </div>
     </section>
     <section>
       <div class="senior-container">
         <div class="btn-controller-1">
-          <button class="page-btn-1" data-cana="1"><i class="fa-solid fa-less-than"></i></button>
+          <button class="page-btn-1" data-cana="1">
+            <i class="fa-solid fa-less-than"></i>
+          </button>
         </div>
         <div class="container first-Card" data-cana="1">
           <div>
             <div class="small-border">
-                 <p>Right way</p>
-                 <div class="das-1"></div>
+              <p>Right way</p>
+              <div class="das-1"></div>
             </div>
-            <h1>A people’s perspective on <br> On Powerful Access to Justice</h1>
+            <h1>
+              A people’s perspective on <br />
+              On Powerful Access to Justice
+            </h1>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-              sed do eiusmod tempor incididunt ut labore <br>  et dolore magna
-              aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-              ullamco laboris nisi ut <br>  aliquip ex ea.
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore <br />
+              et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+              exercitation ullamco laboris nisi ut <br />
+              aliquip ex ea.
             </p>
             <button class="free">Free Consulting</button>
-              <button class="learn">Learn More</button>
+            <button class="learn">Learn More</button>
           </div>
           <div class="image-container">
-            <img src="/assets/img/hero-slider/pexels-ekaterina-bolovtsova-6077326.jpg" alt="">
+            <img
+              src="/assets/img/hero-slider/pexels-ekaterina-bolovtsova-6077326.jpg"
+              alt=""
+            />
           </div>
         </div>
         <div class="container first-Card hidden" data-cana="2">
           <div>
             <div class="small-border">
-                 <p>Right way</p>
-                 <div class="das-1"></div>
+              <p>Right way</p>
+              <div class="das-1"></div>
             </div>
-            <h1>A people’s perspective on <br> On Powerful Access to Justice</h1>
+            <h1>
+              A people’s perspective on <br />
+              On Powerful Access to Justice
+            </h1>
             <p>
-              Bars provides users with easy-to-understand answers to common legal questions, helping individuals navigate the legal system and understand their rights. This ensures users receive the information they need to make informed decisions regarding their legal matters.
+              Bars provides users with easy-to-understand answers to common
+              legal questions, helping individuals navigate the legal system and
+              understand their rights. This ensures users receive the
+              information they need to make informed decisions regarding their
+              legal matters.
             </p>
             <button class="free">Free Consulting</button>
-              <button class="learn">Learn More</button>
+            <button class="learn">Learn More</button>
           </div>
           <div class="image-container">
-            <img src="/assets/img/hero-slider/pexels-ekaterina-bolovtsova-6077326.jpg" alt="">
+            <img
+              src="/assets/img/hero-slider/pexels-ekaterina-bolovtsova-6077326.jpg"
+              alt=""
+            />
           </div>
         </div>
-       <div class="btn-controller">
-        <button class="go-Front" data-cana="2"><i class="fa-solid fa-greater-than"></i></button>
-       </div>
-      </div>   
+        <div class="btn-controller">
+          <button class="go-Front" data-cana="2">
+            <i class="fa-solid fa-greater-than"></i>
+          </button>
+        </div>
+      </div>
     </section>
-    <section>
+    <section class="">
       <div class="card-container-2">
         <div class="card-container">
           <div class="icon">
@@ -115,7 +142,13 @@
           </div>
           <div>
             <h1>Legal Guidance and Support</h1>
-            <p>Bars is a software that answers simple legal questions in  <br> plain language, allowing people to know their rights <br>  and approach the legal system. This makes sure that the <br>  users are well informed in as much as they deal with <br>  their legal issues so that they can make informed decisions.</p>
+            <p>
+              Bars is a software that answers simple legal questions in <br />
+              plain language, allowing people to know their rights <br />
+              and approach the legal system. This makes sure that the <br />
+              users are well informed in as much as they deal with <br />
+              their legal issues so that they can make informed decisions.
+            </p>
           </div>
         </div>
         <!-- second container begins -->
@@ -124,29 +157,51 @@
             <p><i class="fa-solid fa-gavel"></i></p>
           </div>
           <div>
-            <h1>Pro Bono Lawyer Connection  </h1>
-            <p> The platform directly links users with pro bono lawyers <br> in order to facilitate them getting the right lawyer <br>  depending on the type and severity of their case. This <br> cuts down the time and energy required in the <br>  contracting process thus making it easier for one to get <br> the needed legal assistance</p>
+            <h1>Pro Bono Lawyer Connection</h1>
+            <p>
+              The platform directly links users with pro bono lawyers <br />
+              in order to facilitate them getting the right lawyer <br />
+              depending on the type and severity of their case. This <br />
+              cuts down the time and energy required in the <br />
+              contracting process thus making it easier for one to get <br />
+              the needed legal assistance
+            </p>
           </div>
         </div>
         <!-- start of third column -->
-         <div class="card-container">
+        <div class="card-container">
           <div class="icon">
             <p><i class="fa-solid fa-user-secret"></i></p>
           </div>
           <div>
             <h1>Real-Time Case Updates</h1>
-            <p>Bars enable the clients to monitor the progress of their <br>  case through the provision of constant and frequent <br>  updates of events such as important dates, hearings <br>  among others. This feature makes a user always <br>  informed on the status of their legal issues and be in a <br>  position to communicate with lawyers hassle freel</p>
+            <p>
+              Bars enable the clients to monitor the progress of their <br />
+              case through the provision of constant and frequent <br />
+              updates of events such as important dates, hearings <br />
+              among others. This feature makes a user always <br />
+              informed on the status of their legal issues and be in a <br />
+              position to communicate with lawyers hassle freel
+            </p>
           </div>
-         </div>
+        </div>
       </div>
     </section>
-    <section class="info-naham">
+    <section class="info-naham unique">
       <div class="about-info-container">
         <div class="real-about">
           <p>About-Us</p>
           <div class="das-1"></div>
-          <h1>We help individuals navigate the legal <br> system and understand their rights.</h1>
-          <p>Bars provides users with easy-to-understand answers to common legal questions, helping individuals navigate the  legal system and understand their rights. This ensures users receive the information they need to make informed  decisions regarding their legal matters.</p>
+          <h1>
+            We help individuals navigate the legal <br />
+            system and understand their rights.
+          </h1>
+          <p>
+            Bars provides users with easy-to-understand answers to common legal
+            questions, helping individuals navigate the legal system and
+            understand their rights. This ensures users receive the information
+            they need to make informed decisions regarding their legal matters.
+          </p>
           <div class="features-side">
             <div>
               <p><i class="fa-solid fa-square-check"></i> 100% success rate</p>
@@ -155,31 +210,223 @@
               <p><i class="fa-solid fa-square-check"></i> Fast Support</p>
             </div>
             <div>
-              <p><i class="fa-solid fa-square-check"></i> No need Extra Cost for consult</p>
+              <p>
+                <i class="fa-solid fa-square-check"></i> No need Extra Cost for
+                consult
+              </p>
             </div>
             <div>
-              <p><i class="fa-solid fa-square-check"></i>High Court Performance</p>
+              <p>
+                <i class="fa-solid fa-square-check"></i>High Court Performance
+              </p>
             </div>
             <div>
-              <p><i class="fa-solid fa-square-check"></i>Expert Legal Service</p>
+              <p>
+                <i class="fa-solid fa-square-check"></i>Expert Legal Service
+              </p>
             </div>
             <div>
               <p><i class="fa-solid fa-square-check"></i> Free Consultation</p>
             </div>
             <div>
-              <p><i class="fa-solid fa-square-check"></i> Highly Recommendation</p>
+              <p>
+                <i class="fa-solid fa-square-check"></i> Highly Recommendation
+              </p>
             </div>
             <div>
-              <p><i class="fa-solid fa-square-check"></i> Quick Complete Case</p>
+              <p>
+                <i class="fa-solid fa-square-check"></i> Quick Complete Case
+              </p>
             </div>
           </div>
           <button class="free-1">Free Consultation</button>
         </div>
         <div class="image-about-container">
-          <img src="/assets/img/hero-slider/pexels-sora-shimazaki-5668473.jpg" alt="">
+          <img
+            src="/assets/img/hero-slider/pexels-sora-shimazaki-5668473.jpg"
+            alt=""
+          />
           <div class="inside"></div>
         </div>
-       
+      </div>
+    </section>
+    <section class="unique">
+      <div class="second-card-container">
+        <div class="second-card">
+          <div class="second-card-top">
+            <p><i class="fa-solid fa-scale-balanced"></i></p>
+          </div>
+          <div>
+            <h1>5,600+</h1>
+            <p>Solved Cases</p>
+          </div>
+        </div>
+        <div class="second-card">
+          <div class="second-card-top">
+            <p><i class="fa-solid fa-gavel"></i></p>
+          </div>
+          <div>
+            <h1>4,000+</h1>
+            <p>Cases Won</p>
+          </div>
+        </div>
+        <div class="second-card">
+          <div class="second-card-top">
+            <p><i class="fa-solid fa-medal"></i></p>
+          </div>
+          <div>
+            <h1>1,500+</h1>
+            <p>Awards Won</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="contain unique">
+      <div class="text-sides">
+        <div class="first-text-side">
+          <p>Our Services</p>
+          <div></div>
+        </div>
+        <div class="second-text-side">
+          <h1>We Are Providing Top Services With</h1>
+        </div>
+        <div class="third-text-container">
+          <div class="third-text-main">
+            <p>lorem od bj they are praying on my downfall but i am up still</p>
+          </div>
+        </div>
+      </div>
+      <div class="our-services-container">
+        <div class="card-container">
+          <div class="icon vaf">
+            <p><i class="fa-solid fa-scale-balanced"></i></p>
+          </div>
+          <div>
+            <h1>Legal Guidance and Support</h1>
+            <p>
+              Bars is a software that answers simple legal questions in <br />
+              plain language, allowing people to know their rights <br />
+              and approach the legal system. This makes sure that the <br />
+              users are well informed in as much as they deal with <br />
+              their legal issues so that they can make informed decisions.
+            </p>
+          </div>
+        </div>
+        <div class="card-container">
+          <div class="icon vaf">
+            <p><i class="fa-solid fa-gavel"></i></p>
+          </div>
+          <div>
+            <h1>Pro Bono Lawyer Connection</h1>
+            <p>
+              The platform directly links users with pro bono lawyers <br />
+              in order to facilitate them getting the right lawyer <br />
+              depending on the type and severity of their case. This <br />
+              cuts down the time and energy required in the <br />
+              contracting process thus making it easier for one to get <br />
+              the needed legal assistance
+            </p>
+          </div>
+        </div>
+        <div class="card-container">
+          <div class="icon vaf">
+            <p><i class="fa-solid fa-user-secret"></i></p>
+          </div>
+          <div>
+            <h1>Real-Time Case Updates</h1>
+            <p>
+              Bars enable the clients to monitor the progress of their <br />
+              case through the provision of constant and frequent <br />
+              updates of events such as important dates, hearings <br />
+              among others. This feature makes a user always <br />
+              informed on the status of their legal issues and be in a <br />
+              position to communicate with lawyers hassle freel
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="contact-us-container">
+        <div class="first-contact-us-part">
+          <h1>
+            Contact Us Today, Get In Touch <br />
+            With Expert
+          </h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore <br />
+            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+            exercitation ullamco laboris nisi ut <br />
+            aliquip ex ea.
+          </p>
+          <div class="contact-info">
+            <div>
+              <div>
+                <h1>Phone</h1>
+                  <div class="das-1"></div>
+              </div>
+              <p>+0123456987</p>
+            </div>
+            <div>
+              <h1>Social Link</h1>
+              <div class="das-1"></div>
+              <div class="social-icons">
+                <p><i class="fa-brands fa-square-facebook"></i></p>
+                <p><i class="fa-brands fa-square-instagram"></i></p>
+                <p><i class="fa-brands fa-square-twitter"></i></p>
+                <p><i class="fa-brands fa-google-plus-g"></i></p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="second-contact-about">
+          <p>Contact Form</p>
+          <div></div>
+          <h1 class="flex">Get A Flexible Schedule</h1>
+          <div class="form-container">
+            <div class="input-side-1">
+              <div class="iconic">
+                <i class="fa-solid fa-user"></i>
+              </div>
+              <div class="">
+                <input type="text" id="name">
+              </div>
+            </div>
+            <div class="input-side-2">
+              <div class="iconic">
+                <i class="fa-solid fa-envelope"></i>
+              </div>
+              <div>
+                <input type="email" name="email" id="email" placeholder="pls enter ur email here...">
+              </div>
+            </div>
+            <div class="input-side-3">
+              <div class="iconic">
+                <i class="fa-solid fa-phone"></i>
+              </div>
+              <div>
+                <input type="number" name="nums" id="nums" placeholder="Enter Your Phone number...">
+              </div>
+            </div>
+            <div class="input-side-4">
+              <div class="iconic">
+                <i class="fa-solid fa-calendar-days"></i>
+              </div>
+              <div>
+                <input type="date" name="fad" id="fade">
+              </div>
+            </div>
+            <div class="input-side-5">
+              <div>
+                <i class="fa-solid fa-comment"></i>
+              </div>
+              <div>
+                <textarea name="comments" id="comments"></textarea>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
     <script src="index.js"></script>
