added some stuffs thr loading stuffs done with the home page of bars

--- a/mines/index.html
+++ b/mines/index.html
@@ -364,7 +364,7 @@
             <div>
               <div>
                 <h1>Phone</h1>
-                  <div class="das-1"></div>
+                <div class="das-1"></div>
               </div>
               <p>+0123456987</p>
             </div>
@@ -390,7 +390,7 @@
                 <i class="fa-solid fa-user"></i>
               </div>
               <div class="">
-                <input type="text" id="name">
+                <input type="text" id="name" />
               </div>
             </div>
             <div class="input-side-2">
@@ -398,7 +398,12 @@
                 <i class="fa-solid fa-envelope"></i>
               </div>
               <div>
-                <input type="email" name="email" id="email" placeholder="pls enter ur email here...">
+                <input
+                  type="email"
+                  name="email"
+                  id="email"
+                  placeholder="pls enter ur email here..."
+                />
               </div>
             </div>
             <div class="input-side-3">
@@ -406,7 +411,12 @@
                 <i class="fa-solid fa-phone"></i>
               </div>
               <div>
-                <input type="number" name="nums" id="nums" placeholder="Enter Your Phone number...">
+                <input
+                  type="number"
+                  name="nums"
+                  id="nums"
+                  placeholder="Enter Your Phone number..."
+                />
               </div>
             </div>
             <div class="input-side-4">
@@ -414,7 +424,7 @@
                 <i class="fa-solid fa-calendar-days"></i>
               </div>
               <div>
-                <input type="date" name="fad" id="fade">
+                <input type="date" name="fad" id="fade" />
               </div>
             </div>
             <div class="input-side-5">
@@ -426,9 +436,128 @@
               </div>
             </div>
           </div>
+          <div class="btn">
+            <button>Get An Appointment</button>
+          </div>
         </div>
       </div>
     </section>
+    <section class="shaka">
+      <p> Exprerienced Probono Lawyers</p>
+      <h1>Our Experienced Lawyers Are Ready To <br> answer any questions</h1>
+      <div class="about-features">
+        <div class="about-features-card-1">
+          <div>
+            <img src="/assets/img/case-study-dateilas.jpg" alt="">
+          </div>
+          <div class="about-das">
+            <h1>Thomas Daniel</h1>
+            <p>Senior Attorney</p>
+            <div class="icons">
+              <div class="special">
+                <i class="fa-brands fa-square-facebook"></i>
+              </div>
+              <div class="special">
+                <p><i class="fa-brands fa-square-instagram"></i></p>
+              </div>
+              <div class="special">
+                <p><i class="fa-brands fa-square-twitter"></i></p>
+              </div>
+              <div class="special">
+                <p><i class="fa-brands fa-google-plus-g"></i></p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="about-features-card-1">
+          <div>
+            <img src="/assets/img/case-study-dateilas.jpg" alt="">
+          </div>
+          <div class="about-das">
+            <h1>Nikoloson Gail</h1>
+            <p>Corporate Lawyer</p>
+            <div class="icons">
+              <p><i class="fa-brands fa-square-facebook"></i></p>
+              <p><i class="fa-brands fa-square-instagram"></i></p>
+              <p><i class="fa-brands fa-square-twitter"></i></p>
+              <p><i class="fa-brands fa-google-plus-g"></i></p>
+            </div>
+          </div>
+        </div>
+        <div class="about-features-card-2">
+          <div>
+            <img src="/assets/img/case-study-dateilas.jpg" alt="">
+          </div>
+          <div class="about-das">
+            <h1>Thanos Daniyl</h1>
+            <p>Family Consultant</p>
+            <div class="icons">
+              <p><i class="fa-brands fa-square-facebook"></i></p>
+              <p><i class="fa-brands fa-square-instagram"></i></p>
+              <p><i class="fa-brands fa-square-twitter"></i></p>
+              <p><i class="fa-brands fa-google-plus-g"></i></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <div class="footer-container">
+        <div>
+          <p>Bars</p>
+          <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui <br> blanditiis praesentium voluptatum deleniti atque corrupti quos dolores <br> et quas molestias excepturi sint occaecati cupiditate non provident, <br> similique sunt in culpa qui officia deserunt mollitia animi, id est <br> laborum et dolorum fuga. Et harum quidem rerum.</p>
+          <div class="icons-feel-the-same">
+            <p><i class="fa-brands fa-square-facebook"></i></p>
+              <p><i class="fa-brands fa-square-instagram"></i></p>
+              <p><i class="fa-brands fa-square-twitter"></i></p>
+              <p><i class="fa-brands fa-google-plus-g"></i></p>
+          </div>
+        </div>
+        <div class="">
+          <h3>Quick Link</h3>
+          <div></div>
+          <div class="links">
+            <p><i class="fa-solid fa-asterisk"></i> Home</p>
+            <p><i class="fa-solid fa-asterisk"></i> About-us</p>
+            <p><i class="fa-solid fa-asterisk"></i>Our Services</p>
+            <p><i class="fa-solid fa-asterisk"></i>Our Case Study</p>
+            <p><i class="fa-solid fa-asterisk"></i>Our Blog</p>
+            <p><i class="fa-solid fa-asterisk"></i>Clients Review</p>
+            <p><i class="fa-solid fa-asterisk"></i>Our Attorneys</p>
+          </div>
+        </div>
+        <div>
+          <h3>Quick Link</h3>
+          <div></div>
+          <div class="links">
+            <p><i class="fa-solid fa-asterisk"></i> Home</p>
+            <p><i class="fa-solid fa-asterisk"></i> About-us</p>
+            <p><i class="fa-solid fa-asterisk"></i>Our Services</p>
+            <p><i class="fa-solid fa-asterisk"></i>Our Case Study</p>
+            <p><i class="fa-solid fa-asterisk"></i>Our Blog</p>
+            <p><i class="fa-solid fa-asterisk"></i>Clients Review</p>
+            <p><i class="fa-solid fa-asterisk"></i>Our Attorneys</p>
+          </div>
+        </div>
+        <div>
+          <h3>Quick Link</h3>
+          <div></div>
+          <div class="links">
+            <p><i class="fa-solid fa-asterisk"></i> Home</p>
+            <p><i class="fa-solid fa-asterisk"></i> About-us</p>
+            <p><i class="fa-solid fa-asterisk"></i>Our Services</p>
+            <p><i class="fa-solid fa-asterisk"></i>Our Case Study</p>
+            <p><i class="fa-solid fa-asterisk"></i>Our Blog</p>
+            <p><i class="fa-solid fa-asterisk"></i>Clients Review</p>
+            <p><i class="fa-solid fa-asterisk"></i>Our Attorneys</p>
+          </div>
+        </div>
+      </div>
+      <hr>
+      <div class="bottom">
+      <p>&copy;Bars is Proudly owned by <span> Nava Anonymus</span></p>
+      </div>
+    </footer>
     <script src="index.js"></script>
   </body>
 </html>
